--- a/HackerNewsWrapperApi/HackerNewsWrapperApi.csproj
+++ b/HackerNewsWrapperApi/HackerNewsWrapperApi.csproj
@@ -11,4 +11,11 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
+
+    <ItemGroup>
+      <Folder Include="Dtos\" />
+      <Folder Include="Interfaces\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
