--- a/HackerNewsWrapperApi/HackerNewsWrapperApi.csproj
+++ b/HackerNewsWrapperApi/HackerNewsWrapperApi.csproj
@@ -8,14 +8,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
     </ItemGroup>
 
 
     <ItemGroup>
-      <Folder Include="Dtos\" />
-      <Folder Include="Interfaces\" />
-      <Folder Include="Services\" />
+      <Folder Include="NewDirectory1\" />
     </ItemGroup>
 
 </Project>
