create service cache id from url

--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MySettings": {
+    "ApiUrl": "https://hacker-news.firebaseio.com/v0/beststories.json",
+    "BestApiUrl": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
