--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MySettings": {
     "ApiUrl": "https://hacker-news.firebaseio.com/v0/beststories.json",
-    "BestApiUrl": ""
+    "BestApiUrl": " https://hacker-news.firebaseio.com/v0/item/"
   },
   "Logging": {
     "LogLevel": {
