Create a method to retrieve story

--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "MySettings": {
-    "ApiUrl": "https://hacker-news.firebaseio.com/v0/beststories.json",
-    "BestApiUrl": " https://hacker-news.firebaseio.com/v0/item/"
+  "HackerApi": {
+    "Url": "https://hacker-news.firebaseio.com",
+    "Paths": [{"Ids":"/v0/beststories.json"},{"Item":"/v0/item/"}]
   },
   "Logging": {
     "LogLevel": {
