--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -2,8 +2,12 @@
   "HackerApi": {
     "Url": "https://hacker-news.firebaseio.com",
     "Paths": [
-      {"Ids":"/v0/beststories.json"},
-      {"Item":"/v0/item/"}
+      {
+        "Ids": "/v0/beststories.json"
+      },
+      {
+        "Item": "/v0/item/"
+      }
     ]
   },
   "Logging": {
