create service for detailsId

--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -1,14 +1,10 @@
 {
   "HackerApi": {
     "Url": "https://hacker-news.firebaseio.com",
-    "Paths": [
-      {
-        "Ids": "/v0/beststories.json"
-      },
-      {
-        "Item": "/v0/item/"
-      }
-    ]
+    "Paths": {
+      "Ids": "/v0/beststories.json",
+      "Item": "/v0/item/"
+    }
   },
   "Logging": {
     "LogLevel": {
