--- a/HackerNewsWrapperApi/appsettings.json
+++ b/HackerNewsWrapperApi/appsettings.json
@@ -6,11 +6,22 @@
       "Item": "/v0/item/"
     }
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs\\log.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext"]
   },
   "AllowedHosts": "*"
 }
